seaqt/QtSql/gen_qsqlindex.h

class QSqlField;
class QSqlIndex;
typedef struct QSqlField QSqlField;
typedef struct QSqlIndex QSqlIndex;
QSqlIndex* QSqlIndex_new();
QSqlIndex* QSqlIndex_new_from(QSqlIndex* from);
QSqlIndex* QSqlIndex_new_cursorName(struct seaqt_string cursorName);
QSqlIndex* QSqlIndex_new_cursorName_name(struct seaqt_string cursorName, struct seaqt_string name);
void QSqlIndex_operatorAssign(QSqlIndex* self, QSqlIndex* from);
void QSqlIndex_setCursorName(QSqlIndex* self, struct seaqt_string cursorName);
struct seaqt_string QSqlIndex_cursorName(const QSqlIndex* self);
void QSqlIndex_setName(QSqlIndex* self, struct seaqt_string name);
struct seaqt_string QSqlIndex_name(const QSqlIndex* self);
void QSqlIndex_append_field(QSqlIndex* self, QSqlField* field);
void QSqlIndex_append_field_desc(QSqlIndex* self, QSqlField* field, bool desc);
bool QSqlIndex_isDescending(const QSqlIndex* self, int i);
void QSqlIndex_setDescending(QSqlIndex* self, int i, bool desc);